...
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_edHoTenDK"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content" >
        <EditText
            android:id="@+id/edHoTenDK"
            android:hint="Họ tên đầy đủ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>


...
        android:checked="true"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnDK"
        android:layout_width="match_parent"
        android:text="Đăng ký"
        android:padding="10dp"
        android:textColor="@color/colorWhite"
        android:background="@color/colorOrange"
        android:layout_margin="10dp"
...
